--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
   },
   "homepage": "https://github.com/cyclic-software/starter-express-api#readme",
   "dependencies": {
+    "aws-sdk": "^2.1490.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "libreoffice-convert": "^1.5.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
+    "s3fs": "^2.5.0"
   }
 }
