--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/cyclic-software/starter-express-api#readme",
   "dependencies": {
     "aws-sdk": "^2.1492.0",
+    "cors": "^2.8.5",
     "docx-pdf": "^0.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
