--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "libreoffice-convert": "^1.5.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^2.10.0",
-    "phantomjs": "^2.1.7",
+    "phantomjs-prebuilt": "^2.1.16",
     "s3fs": "^2.5.0",
     "stream": "^0.0.2"
   }
