--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
+    "html-pdf": "^3.0.1",
     "jsonwebtoken": "^9.0.2",
     "libreoffice-convert": "^1.5.0",
     "multer": "^1.4.5-lts.1",
