--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "dependencies": {
     "aws-sdk": "^2.1492.0",
     "cors": "^2.8.5",
-    "docx-pdf": "^0.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
@@ -29,6 +28,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^2.10.0",
     "s3fs": "^2.5.0",
-    "stream": "^0.0.2"
+    "stream": "^0.0.2",
+    "sharp": "^0.32.6"
   }
 }
