--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "html-pdf": "^3.0.1",
+    "jimp": "^0.22.10",
     "jsonwebtoken": "^9.0.2",
     "libreoffice-convert": "^1.5.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^2.10.0",
     "s3fs": "^2.5.0",
-    "stream": "^0.0.2",
-    "sharp": "^0.32.6"
+    "stream": "^0.0.2"
   }
 }
