--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
+    "express-session": "^1.17.3",
     "html-pdf": "^3.0.1",
     "jimp": "^0.22.10",
     "jsonwebtoken": "^9.0.2",
