--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^2.10.0",
     "s3fs": "^2.5.0",
-    "stream": "^0.0.2"
+    "stream": "^0.0.2",
+    "ytdl-core": "^4.11.5"
   }
 }
